<resources>
    <string name="app_name">FishTank</string>

    <string name="login_name">Phone Number</string>
    <string name="login_password">Password</string>
    <string name="login_read_and_agree">Read And Agree</string>
    <string name="login_terms_and_privacy">《Terms of Use and Privacy Policy》</string>
    <string name="login_txt">Login</string>
    <string name="login_register">Register account</string>
    <string name="login_retrieve_password">Retrieve password</string>
    <string name="register_phone_num">please input your phone num</string>
    <string name="register_verification_code">please input verification code</string>
    <string name="register_next_step">next step</string>
    <string name="input_password">input password</string>
    <string name="input_password_confirm">input password confirm</string>
    <string name="submit">submit</string>
    <string name="main_scene_setting">scene setting</string>
    <string name="main_user_center">user center</string>
    <string name="main_edit_password">edit password</string>
    <string name="doc_title">Terms of Use and Privacy Policy</string>
    <string name="register_txt">Register</string>
    <string name="register_code">send code</string>
    <string name="forget_txt">Forget Password</string>
    <string name="forget_password_phone_txt">please input your account(phone num)</string>
    <string name="main_title_txt">drawing room</string>
    <string name="login_out">login out</string>
    <string name="scene_manager">scene manager</string>
    <string name="user_edit_txt">edit</string>
    <string name="login_register_txt">Register</string>
    <string name="please_enter_the_correct_username_and_password">Please enter the correct username and password</string>
    <string name="login_failure">login failure</string>
    <string name="login_success">login success</string>
    <string name="input_right_code">please input right code</string>
    <string name="input_right_phone_num">please input right phine number</string>
    <string name="register_failed">register failed</string>
    <string name="send_code_failed">send code failed</string>
    <string name="register_succese">register success</string>
    <string name="password_not_same">password not same</string>
    <string name="reset_psw_success">reset password success</string>
    <string name="reset_psw_failed">reset password failed</string>
    <string name="press_again_finish">press again finish</string>
    <string name="edit_user_info">Edit user information</string>
    <string name="head_pic">head image</string>
    <string name="nick_name">nick name</string>
    <string name="phone_num">phone number</string>
    <string name="confirm_edit">confirm edit</string>
    <string name="cancel">cancel</string>
    <string name="input_old_pwd">input old password</string>
    <string name="input_new_pwd">input new password</string>
    <string name="confirm_new_psw">confirm new password</string>
    <string name="confirm">confirm</string>
    <string name="user_pwd_set">set device password</string>
    <string name="input_right_pwd">please input right password</string>
    <string name="log_out_failed">log out failed</string>
    <string name="log_out_success">log out success</string>
    <string name="add_new_device">Add New Device</string>
    <string name="device_list">Device List</string>
    <string name="add_scene">add scene</string>
    <string name="custom_days">自定义天数</string>
    <string name="device_in_net">配置设备入网</string>
    <string name="add_device">添加设备</string>
    <string name="device_connect">设备连接</string>
    <string name="set_params_title">客厅-自定义排插1</string>
    <string name="edit_push_num">修改推送手机号码</string>
    <string name="timer_setting">灯光1定时器设置</string>
    <string name="demo_min_label">Min</string>
    <string name="demo_max_label">Max</string>
    <string name="hint_push_phonenumber">请输入推送手机号码</string>
    <string name="ph_correct_step1">请将探头放进第一组标准液中，并在下方输入该标准液的标准PH值，等上面的实测值读数稳定后，点击下一步</string>
    <string name="ph_correct_step2">请将探头放进第二组标准液中，并在下方输入该标准液的标准PH值，等上面的实测值读数稳定后，点击完成即可完成探头校准</string>
    <string-array name="week">
        <item>星期天</item>
        <item>星期一</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item>
    </string-array>
</resources>
