<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/login_activity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mibo.fishtank.activity.LoginActivity"
    >

    <com.mibo.fishtank.weight.TitleBar
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <!--用户名-->
    <LinearLayout
        android:id="@+id/login_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/login_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:hint="@string/login_name"
            android:inputType="phone"
            android:textColor="@color/color_ffffff"
            android:textColorHint="@color/color_ffffff"
            android:textSize="16sp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_b4ffffff"
            />

    </LinearLayout>
    <!--密码-->
    <LinearLayout
        android:id="@+id/login_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_name_layout"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/register_phone_num"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:textColor="@color/color_ffffff"
            android:textColorHint="@color/color_ffffff"
            android:textSize="16sp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_b4ffffff"
            />

    </LinearLayout>
    <!--隐私政策-->
    <LinearLayout
        android:id="@+id/login_terms_and_privacy_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password_layout"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        >

        <CheckBox
            android:id="@+id/login_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_read_and_agree"
            android:textColor="@color/color_ffffff"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/login_doc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_terms_and_privacy"
            android:textColor="@color/color_4ce1ff"
            />
    </LinearLayout>
    <!--登陆按钮-->
    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_terms_and_privacy_layout"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/white_btn_background_selector"
        android:paddingBottom="17dp"
        android:paddingTop="17dp"
        android:text="@string/login_txt"
        android:textColor="@color/color_000000"
        android:textSize="17sp"
        />
    <!--注册和忘记密码-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/login_register_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/login_register"
            android:textColor="@color/color_ffffff"
            android:textSize="14sp"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:background="@color/color_b4ffffff"
            />

        <TextView
            android:id="@+id/login_forget_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/login_retrieve_password"
            android:textColor="@color/color_ffffff"
            android:textSize="14sp"
            />
    </LinearLayout>
</RelativeLayout>
