<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/forget_activity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mibo.fishtank.activity.ForgetActivity"
    >

    <com.mibo.fishtank.weight.TitleBar
        android:id="@+id/forget_activity_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <!--手机号-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/forget_phone_num"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:hint="@string/forget_password_phone_txt"
            android:inputType="phone"
            android:textColor="@color/color_ffffff"
            android:textColorHint="@color/color_ffffff"
            android:textSize="16sp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_b4ffffff"
            />

    </LinearLayout>
    <!--验证码-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginTop="10dp"
        >

        <EditText
            android:id="@+id/forget_verification_code"
            android:layout_width="230dp"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:hint="@string/register_verification_code"
            android:inputType="number"
            android:textColor="@color/color_ffffff"
            android:textColorHint="@color/color_ffffff"
            android:textSize="16sp"
            />

        <Button
            android:id="@+id/forget_get_code_btn"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/translucent_btn_background_selector"
            android:gravity="center"
            android:text="@string/register_code"
            android:textColor="@color/color_000000"
            android:textSize="12sp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/forget_verification_code"
            android:background="@color/color_b4ffffff"
            />
    </RelativeLayout>
    <!--下一步按钮-->
    <Button
        android:id="@+id/forget_next_step_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/white_btn_background_selector"
        android:paddingBottom="17dp"
        android:paddingTop="17dp"
        android:text="@string/register_next_step"
        android:textColor="@color/color_000000"
        android:textSize="17sp"
        />
</LinearLayout>
