<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/edit_user_info_activity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mibo.fishtank.activity.EditUserInfoActivity"
    >

    <com.mibo.fishtank.weight.TitleBar
        android:id="@+id/edit_user_info_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:id="@+id/edit_user_head_linear"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/color_32ffffff"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:text="@string/head_pic"
                android:textColor="@color/color_ffffff"
                />

            <ImageView
                android:id="@+id/edit_user_head_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:src="@drawable/head_img"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/color_32ffffff"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@color/color_32ffffff"
            >

            <TextView
                android:id="@+id/edit_user_info_name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:text="@string/nick_name"
                android:textColor="@color/color_ffffff"
                />

            <EditText
                android:id="@+id/user_info_name_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:layout_toEndOf="@+id/edit_user_info_name_txt"
                android:background="@null"
                android:gravity="end|center"
                android:inputType="text"
                android:maxLines="1"
                android:text="小明"
                android:textColor="@color/color_b4ffffff"
                android:textSize="14sp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/color_32ffffff"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@color/color_32ffffff"
            >

            <TextView
                android:id="@+id/edit_user_info_num_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:text="@string/phone_num"
                android:textColor="@color/color_ffffff"
                />

            <EditText
                android:id="@+id/user_info_num_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:layout_toEndOf="@+id/edit_user_info_num_txt"
                android:background="@null"
                android:gravity="end|center"
                android:inputType="phone"
                android:maxLines="1"
                android:text="13164737434"
                android:textColor="@color/color_b4ffffff"
                android:textSize="14sp"
                />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/edit_confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/white_btn_background_selector"
        android:gravity="center"
        android:text="@string/confirm_edit"
        android:textColor="@color/color_000000"
        android:textSize="16sp"
        />
</LinearLayout>
